--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -68,7 +68,7 @@ body {
 	min-width: 160px;
 	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 	padding: 12px 16px;
-	z-index: 1;
+	z-index: 1021;
 	right: 0;
 	left: auto;
 }
@@ -138,7 +138,7 @@ body {
 /* card item */
 .container-product .product-items {
 	box-shadow: 0px 0px 6px rgba(38, 50, 56, 0.1);
-	border-radius: 12px;
+	border-radius: 5px;
 	background-color: #fff;
 	min-height: 220px;
 	margin: 8px 8px;
@@ -149,7 +149,7 @@ body {
 .container-product .product-items .product-cover {
 	width: calc(100%);
 	object-fit: cover;
-	border-radius: 8px;
+	border-radius: 5px;
 	padding-bottom: 90%;
 	background-position: center;
 	background-repeat: no-repeat;
@@ -164,3 +164,9 @@ body {
 	margin-bottom: 100px;
 }
 /* card item */
+
+.select-type {
+	color: #fff !important;
+    background-color: var(--theme-blue-1) !important;
+    border-color: var(--theme-blue-1) !important;
+}
